# xpander

./: .gitignore  Cargo.toml  README.md  config.example.yaml  install.sh
src/: main.rs
src/config/: loader.rs  mod.rs  schema.rs
src/engine/: expander.rs  keymaps.rs  matcher.rs  mod.rs  monitor.rs  output.rs  trie.rs
src/gui/: editor.rs  mod.rs  tray.rs  window.rs
src/variables/: builtins.rs  mod.rs
